Fix White Large Square not showing as emoji

--- a/sticker-creator/src/fonts.scss
+++ b/sticker-creator/src/fonts.scss
@@ -6,11 +6,14 @@
   src: url('asset:///fonts/inter-v3.19/Inter-BoldItalic.woff2');
   font-weight: bolder;
   font-style: italic;
+  // Let "WHITE LARGE SQUARE" be an emoji
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('asset:///fonts/inter-v3.19/Inter-Bold.woff2');
   font-weight: bolder;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
@@ -18,26 +21,31 @@
   src: url('asset:///fonts/inter-v3.19/Inter-SemiBoldItalic.woff2');
   font-weight: bold;
   font-style: italic;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('asset:///fonts/inter-v3.19/Inter-Italic.woff2');
   font-style: italic;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('asset:///fonts/inter-v3.19/Inter-SemiBold.woff2');
   font-weight: bold;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('asset:///fonts/inter-v3.19/Inter-Medium.woff2');
   font-weight: 500;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
   font-family: 'Inter';
   src: url('asset:///fonts/inter-v3.19/Inter-Regular.woff2');
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
