--- a/stylesheets/_fontfaces.scss
+++ b/stylesheets/_fontfaces.scss
@@ -12,11 +12,14 @@ $protocol: 'asset://';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-BoldItalic.woff2');
   font-weight: bolder;
   font-style: italic;
+  // Let "WHITE LARGE SQUARE" be an emoji
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-Bold.woff2');
   font-weight: bolder;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
@@ -24,26 +27,31 @@ $protocol: 'asset://';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-SemiBoldItalic.woff2');
   font-weight: bold;
   font-style: italic;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-Italic.woff2');
   font-style: italic;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-SemiBold.woff2');
   font-weight: bold;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 @font-face {
   font-family: 'Inter';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-Medium.woff2');
   font-weight: 500;
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
   font-family: 'Inter';
   src: url('#{$protocol}/fonts/inter-v3.19/Inter-Regular.woff2');
+  unicode-range: U+0-2B1B, U+2B1D-10FFFF;
 }
 
 @font-face {
